<resources>
    <string name="app_name" translatable="false">OpenCamera Sensors</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="exposure_locked">Exposure locked</string>
    <string name="exposure_unlocked">Exposure unlocked</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="cancelled_repeat_mode">Cancelled repeat mode</string>
    <string name="started_timer">Started timer</string>
    <string name="failed_to_save_video">Failed to save video file</string>
    <string name="failed_to_record_video">Failed to record video</string>
    <string name="started_recording_video">Started recording video</string>
    <string name="sorry">Sorry</string>
    <string name="failed_to_save_photo">Failed to save photo</string>
    <string name="failed_to_save_photo_raw">Failed to save RAW photo</string>
    <string name="failed_to_auto_stabilise">Failed to auto-level</string>
    <string name="failed_to_start_camera_preview">Failed to start camera preview</string>
    <string name="taking_photo">Taking photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="location_not_available">GPS location not available</string>
    <string name="photo_deleted">Photo deleted</string>
    <string name="no_gallery_app">No gallery app available</string>
    <string name="screen_is_locked">Screen is locked\nswipe the screen to unlock</string>
    <string name="unlocked">Unlocked</string>
    <string name="auto_stabilise_not_supported">Sorry, auto-level not supported\non this device</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="max_duration">Max duration</string>
    <string name="color_effect">Color effect</string>
    <string name="scene_mode">Scene mode</string>
    <string name="white_balance">White balance</string>
    <string name="angle">Angle</string>
    <string name="direction">Direction</string>
    <string name="failed_to_open_camera_1">FAILED TO OPEN CAMERA.</string>
    <string name="failed_to_open_camera_2">CAMERA MAY BE IN USE</string>
    <string name="failed_to_open_camera_3">BY ANOTHER APPLICATION?</string>
    <string name="iso">ISO</string>
    <string name="zoom">Zoom</string>
    <string name="free_memory">Free</string>
    <string name="screen_lock_message_1">[LOCKED:</string>
    <string name="screen_lock_message_2">Swipe to unlock]</string>
    <string name="failed_to_stamp">Failed to stamp info to photo</string>
    <string name="metres_abbreviation">m</string>
    <string name="preference_rec_sync_settings">RecSync settings…</string>
    <string name="preference_enable_rec_sync">Use RecSync</string>
    <string name="preference_enable_rec_sync_summary">Enable or disable RecSync. It is used for synchronous multi-cam recording. Requires Camera2 API support and Wi-Fi or hotspot to be enabled.</string>
    <string name="preference_enable_phase_alignment">Enable phase alignment</string>
    <string name="preference_enable_phase_alignment_summary">Enables the ability to achieve sub-millisecond video synchronization via frame phase alignment. Devices of the same model with realtime timestamping support are needed for this to work properly.</string>
    <string name="preference_enable_tag_sync">Enable filename tag synchronization</string>
    <string name="preference_enable_tag_sync_summary">Whether to sync filename tag.</string>
    <string name="preference_upload_settings">Upload settings</string>
    <string name="preference_save_tag">Filename tag</string>
    <string name="preference_save_tag_summary">The prefix to use for the save filenames for the purpose of uploading. The filenames recorded have the following form: [TAG]_[ID]_[FILENAME] where [TAG] is used as a unique recording identifier and [ID] identifies the device.</string>
    <string name="preference_sync_settings">Sync settings</string>
    <string name="preference_sync_exposure">Exposure</string>
    <string name="preference_sync_exposure_summary">Exposure time always syncs and locks.</string>
    <string name="preference_sync_iso">ISO</string>
    <string name="preference_sync_iso_summary">Whether to sync ISO value. It is locked when synced.</string>
    <string name="preference_sync_wb">White balance</string>
    <string name="preference_sync_wb_summary">Whether to sync white balance. If a client supports the selected white balance mode then it is synced. If the selected mode is unsupported or it is manual then the selected white balance temperature is synced.</string>
    <string name="preference_sync_flash">Flash</string>
    <string name="preference_sync_flash_summary">Whether to sync flash or torch mode.</string>
    <string name="preference_sync_format">File format</string>
    <string name="preference_sync_format_summary">Whether to sync the file format used for saving photos or videos (depends on the capture mode selected by a leader at the time of synchronization). If the selected format is unsupported by a client then it remains unchanged.</string>
    <string name="recsync_unsupported_summary">Camera2 API, manual exposure time support and Android 7.0 or higher required</string>
    <string name="sync_settings_unlocked">Lock and sync settings</string>
    <string name="sync_settings_locked">Stop settings broadcast</string>
    <string name="settings_broadcast_started">Settings broadcast started</string>
    <string name="align_phases">Align phases</string>
    <string name="timestamp_source">Timestamp source: %s</string>
    <string name="rec_sync_only_video_supported">Only video recording is supported in RecSync mode</string>
    <string name="rec_sync_settings_not_broadcast">Settings are not being broadcast</string>
    <string name="rec_sync_phases_not_aligned">Phases are not aligned</string>
    <string name="calculating_period">Calculating frames period for %.2f s</string>
    <string name="phase_error">Phase Error: %.2f ms</string>
    <string name="phase_alignment_started">Phase alignment started</string>
    <string name="phase_alignment_succeeded">Phase alignment succeeded</string>
    <string name="phase_alignment_failed">Phase alignment failed</string>
    <string name="rec_sync_waiting_for_leader">%s: Waiting for Leader</string>
    <string name="rec_sync_waiting_for_sync">%s: Waiting for Sync</string>
    <string name="rec_sync_synced_to_leader">Client %s\n-Synced to Leader %s</string>
    <string name="rec_sync_leader">Leader: %s</string>
    <string name="rec_sync_client">Client: %s</string>
    <string name="rec_sync_leader_clients">Leader %s: %s.\n</string>
    <plurals name="clients_num">
        <item quantity="one">%d client</item>
        <item quantity="other">%d clients</item>
    </plurals>
    <string name="rec_sync_client_syncing">-Client %s: syncing…\n</string>
    <string name="rec_sync_client_synced">-Client %s: %.2f ms sync\n</string>
    <string name="realtime">realtime</string>
    <string name="unknown">unknown</string>
    <string name="preference_category_camera_effects">Camera Effects</string>
    <string name="preference_auto_stabilise">Auto-level</string>
    <string name="preference_auto_stabilise_summary">Images will be rotated so they are automatically level (photos only) (slower to take photos, and may fail on devices with too low memory)</string>
    <string name="preference_color_effect">Apply a color effect</string>
    <string name="preference_color_effect_summary">Applies the selected color effect to the photo</string>
    <string name="preference_scene_mode">Apply a scene mode</string>
    <string name="preference_scene_mode_summary">Optimise the photo for different scenes</string>
    <string name="preference_white_balance">Set the white balance</string>
    <string name="preference_white_balance_summary">Choose a setting to adjust the white balance</string>
    <string name="preference_iso">Set the ISO</string>
    <string name="preference_iso_summary">A higher value means more sensitive to light (may not work on some devices)</string>
    <string name="preference_exposure">Set the exposure compensation</string>
    <string name="preference_exposure_summary">Set to 0 for the default exposure compensation</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation\n%s</string>
    <string name="preference_face_detection">Face detection</string>
    <string name="preference_face_detection_summary">Use face detection instead of focus areas</string>
    <string name="preference_category_camera_controls">Camera Controls</string>
    <string name="preference_timer">Timer</string>
    <string name="preference_timer_beep">Timer beep</string>
    <string name="preference_timer_beep_summary">Beep when timer is counting down or for repeat mode delay</string>
    <string name="preference_timer_speak">Voice timer countdown</string>
    <string name="preference_timer_speak_summary">Speak the countdown for timer or repeat mode delay (from 60 seconds)</string>
    <string name="preference_burst_mode">Repeat</string>
    <string name="preference_burst_interval">Repeat mode interval</string>
    <string name="preference_screen_camera_controls_more">More camera controls…</string>
    <string name="preference_touch_capture">Touch to capture</string>
    <string name="preference_touch_capture_summary">Take a photo just by touching or double-tapping the preview</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_shutter_sound">Shutter sound</string>
    <string name="preference_shutter_sound_summary">Play a sound when taking a photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_audio_control">Audio control options</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="record_video">Record video</string>
    <string name="selfie">Selfie</string>
</resources>