<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@drawable/shortcut_settings"
        android:shortcutShortLabel="@string/action_settings"
        >
        <intent
            android:action="net.sourceforge.opencamera.SHORTCUT_SETTINGS"
            android:targetPackage="net.sourceforge.opencamera"
            android:targetClass="net.sourceforge.opencamera.MainActivity"
        />
    </shortcut>
    <shortcut
        android:shortcutId="gallery"
        android:enabled="true"
        android:icon="@drawable/shortcut_gallery"
        android:shortcutShortLabel="@string/gallery"
        >
        <intent
            android:action="net.sourceforge.opencamera.SHORTCUT_GALLERY"
            android:targetPackage="net.sourceforge.opencamera"
            android:targetClass="net.sourceforge.opencamera.MainActivity"
        />
    </shortcut>
    <shortcut
        android:shortcutId="video"
        android:enabled="true"
        android:icon="@drawable/shortcut_ic_videocam_white_48dp"
        android:shortcutShortLabel="@string/record_video"
        >
        <intent
            android:action="net.sourceforge.opencamera.SHORTCUT_VIDEO"
            android:targetPackage="net.sourceforge.opencamera"
            android:targetClass="net.sourceforge.opencamera.MainActivity"
        />
    </shortcut>
    <shortcut
        android:shortcutId="selfie"
        android:enabled="true"
        android:icon="@drawable/shortcut_ic_face_white_48dp"
        android:shortcutShortLabel="@string/selfie"
        >
        <intent
            android:action="net.sourceforge.opencamera.SHORTCUT_SELFIE"
            android:targetPackage="net.sourceforge.opencamera"
            android:targetClass="net.sourceforge.opencamera.MainActivity"
        />
    </shortcut>
    <shortcut
        android:shortcutId="camera"
        android:enabled="true"
        android:icon="@drawable/shortcut_ic_photo_camera_white_48dp"
        android:shortcutShortLabel="@string/camera"
        >
        <intent
            android:action="net.sourceforge.opencamera.SHORTCUT_CAMERA"
            android:targetPackage="net.sourceforge.opencamera"
            android:targetClass="net.sourceforge.opencamera.MainActivity"
        />
    </shortcut>
</shortcuts>
